# market-relay-engine-v2

./: .env.example  .gitignore  AGENTS.md  README.md  handoff (2).md  handoff.md  handoff_cleaned.md  handoff_updated_after_pr2.md  pyproject.toml  requirements.txt
config/: calendar_events.yaml  context_refresh.yaml  context_sources.yaml  execution.yaml  macro_calendar.yaml  model_config.yaml  questdb.yaml  risk_limits.yaml  sec_edgar_tickers.yaml  symbols.yaml  usaspending_recipient_ticker_map.yaml
docs/: alpaca_paper.md  architecture.md  configuration.md  context_provenance.md  context_refresh_coordinator.md  context_shadow_evaluation.md  context_source_smoke_testing.md  context_state_cache.md  cost_model.md  data_contracts.md  dbn_inspection.md  decision_context.md  development.md  eia_wpsr.md  execution_metrics.md  external_event_ingestion.md  fake_paper_loop.md  feature_builder.md  feature_parity.md  fill_reconciliation.md  fred_collector.md  historical_parquet_reader.md  label_builder.md  live_runbook.md  macro_calendar.md  order_manager.md  position_state.md  questdb_analysis.md  questdb_health.md  questdb_schema.md  questdb_writer.md  risk_filter.md  risk_filter_rules.md  risk_logging.md  sec_edgar.md  server_runtime_validation.md  testing_fixtures.md  usaspending_collector.md  usaspending_recipient_mapping.md  weekly_analysis.md  (+1 more)
scripts/: check_alpaca_paper.py  check_config.py  check_context_refresh_coordinator.py  check_context_shadow_evaluation.py  check_context_state_cache.py  check_contracts.py  check_cost_model.py  check_dbn_inspector.py  check_questdb.py  (+32 more)
(+169 files in other folders)
